# aoc

./: aoc2018.cabal  ghcid.sh  shell.nix
src/: Day4.hs
test/: Day4Spec.hs
