cabal-version: >=1.10
name: aoc2018
version: 0.1.0.0
license: BSD3
license-file: LICENSE
maintainer: tobias.pflug@gmail.com
author: Tobias Pflug
synopsis: advent of code 2018
build-type: Simple
extra-source-files:
    CHANGELOG.md

library
    exposed-modules:
        Day4
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -fwarn-incomplete-patterns
                 -Wincomplete-record-updates -Wincomplete-uni-patterns
                 -Wredundant-constraints
    build-depends:
        base >=4.12 && <4.13,
        trifecta -any,
        text -any,
        containers -any

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    build-depends:
        base -any,
        hspec -any,
        aoc2018 -any,
        text -any,
        trifecta -any
